<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReQuest</string>
    <string name="base64EncodedPublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAlwqpujglSWf7mZgazn6ow7rWrzofyHZvqTnMO6gqRAp5vE68H2LXTVeA/s9+wNxtsDjvxiACOxypxlm/zPSFQVolP+zU/bxEL1LaDItmmiQGvLidinnfhI/S+GOPXMqZgsqkup6PxCoUSGQbSsQteVpy+LVOvKMPFEgHhIdvmpYUuEk88NHB7fXPS0axNUrIIpw0twliwmM10PdJscfzTroXHNcls79GdPs9L3XAekS7y2wywYFpiPc7OEkqSHFKJhU7m7/AWYIRd/4w/wFSXuifN02Jr05AmmR2hu6hHx8VdNrWWRCZeIukngOJHfCZ6wDfhQnueN5snnXdKRbfqQIDAQAB</string>
    <string name="title_section_requests">Requests Stream</string>
    <string name="title_section_responds">My Responds</string>
    <string name="title_section_profile">My Profile</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="title_activity_new_recommend">New recommendation</string>
    <string name="title_tabs_hot">Hot</string>
    <string name="title_tabs_general">General</string>
    <string name="title_tabs_my">Mine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_request">New request</string>
    <string name="action_settings">Settings</string>
    <string name="connection">Connecting</string>
    <string name="connection_requests">Loading requests...</string>
    <string name="connecting_auth">Authentication...</string>
    <string name="connecting_new_vacancy">Creating new vacancy...</string>
    <string name="new_request">Vacancy name:</string>
    <string name="company_text">Enter the name of your company:</string>
    <string name="post_request">Create request</string>
    <string name="cancel_text">Cancel</string>
    <string name="proceed_text">Next step</string>
    <string name="request_first_step">Set up your request</string>
    <string name="request_second_step">Complete your request</string>
    <string name="back_text">Back</string>
    <string name="reward_text">Enter reward for the candidate recommendation (in USD):</string>
    <string name="logo_text">Add the logo of your company:</string>
    <string name="recommend_text">Recommend</string>
    <string name="buy_text">Buy out</string>
    <string name="desc_item_text">Vacancy description:</string>
    <string name="choose_logo_text">Select logo</string>
    <string name="subtitle">Automatization staff search for the reward</string>
    <string name="welcome">Welcome to ReQuest!</string>
    <string name="company_salary">Enter salary:</string>
    <string name="company_reward">Reward:</string>
    <string name="error_loading_requests">Error loading requests</string>
    <string name="image_path_is_empty">Image path is empty</string>
    <string name="error_uploading_image">Error uploading image</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="profile_save">Update photo</string>
    <string name="profile_update_text">Tap the photo to change it</string>
    <string name="profile_buy_five">1 coin</string>
    <string name="profile_buy_ten">2 coins</string>
    <string name="profile_buy_fiveteen">3 coins</string>
    <string name="profile_buy_twenty">4 coins</string>
    <string name="profile_withdraw">Witdraw money</string>
    <string name="profile_withdraw_text">Amount of money to withdraw:</string>
    <string name="select_picture">Select picture</string>
    <string name="vacancy_created">Vacancy has been created!</string>
    <string name="vacancy_creation_error">Creation error! Details:</string>
    <string name="fill_reward_not_zero">Reward field must be bigger than 0!</string>
    <string name="fill_reward_field">Reward field must not be empty!</string>
    <string name="company_item_text">Company information:</string>
    <string name="preffer_time_text">Wanted until:</string>
    <string name="city_text">City:</string>
    <string name="salary_item_text">Salary:</string>
    <string name="rc_candidate_creation_error">Recommendation failed!</string>
    <string name="rc_candidate_success">Recommendation has been created!</string>
    <string name="rc_candidate_required">Fill required fields!</string>
    <string name="rc_candidate_date_formate_error">Incorrect date, must be for ex: 21.12.1990!</string>
    <string name="rc_candidate_creating">Creating respond</string>
    <string name="buy_coins_text">Purchase coins to create new vacancies:</string>
    <string name="rc_candidate_name">Name:</string>
    <string name="rc_candidate_email">Email:</string>
    <string name="rc_candidate_bdate">Date of Birth:</string>
    <string name="rc_candidate_summary">Summary:</string>
    <string name="rc_candidate_experience">Experience:</string>
    <string name="rc_candidate_last_job">Last job:</string>
    <string name="rc_candidate_last_post">Position at the last place:</string>
    <string name="rc_candidate_selsect_photo">Select candidate photo:</string>
    <string name="rc_candidate_comment">Comment on the candidate:</string>
    <string name="rc_candidate_send">Send</string>
    <string name="rc_candidate_date">Select&#8230;</string>
    <string name="select_summary">Select&#8230;</string>
    <string name="rec_candidate_summary_attach">Attach summary file:</string>
    <string name="not_enough_funds">Not enought funds, buy more coins!</string>
    <string name="rc_Candidate_summary_add">Open</string>
    <string name="select_cv">Select CV</string>
    <string name="vacancy_responds_button">Show responds</string>
    <string name="vacancy_responds_label">Responds count:</string>
    <string name="vc_company_salary">Enter company salary:</string>
    <string name="vc_enter_city">Enter city:</string>
    <string name="vc_demands">Vacancy demands:</string>
    <string name="vc_terms">Vacancy terms:</string>
    <string name="vc_company_description">Company description:</string>
    <string name="vc_company_address">Company address:</string>
    <string name="rs_created">Created at:</string>
    <string name="rs_user">Who recommended:</string>
    <string name="rs_photo">Candidate photo:</string>
    <string name="rs_cv">Candidate CV file:</string>
    <string name="rs_createAt">Created at:</string>
    <string name="title_activity_responds_show">RespondsShow</string>
    <string name="responds_item_created">Created at:</string>
    <string name="responds_item_updated">Updated at:</string>
    <string name="responds_item_candidate_description">Candidate description:</string>
    <string name="responds_item_email">Email:</string>
    <string name="responds_item_bdate">Birth date:</string>
    <string name="responds_item_lastjob">Last job:</string>
    <string name="responds_item_lastpost">Last post:</string>
    <string name="responds_item_experience">Experience:</string>
    <string name="responds_item_comment">Comment:</string>
    <string name="connection_responds">Loading responds...</string>
    <string name="responds_item_get_cv">Open CV</string>
    <string name="responds_item_cv">Candidate CV file</string>
    <string name="connection_cv_file_fetch">Loading CV file...</string>
    <string name="error_get_cv_file">Error while loading CV file!</string>
    <string name="error_cv_not_found">CV not found!</string>    
    <string name="my_responds_show_candidate_button">Show cadidats</string>
    <string name="responses_not_found">Responses not found!</string>
    <string name="requests_not_found">Requests not found!</string>
    <string name="respond_dismiss">Dismiss</string>
    <string name="respond_processing">Processing</string>
    <string name="respond_offer">Offer</string>
    <string name="respond_accepted">Accepted</string>
    <string name="respond_new">New</string>
    <string name="respond_status">Candidate status:</string>
    <string name="respond_set_status">Setting of status...</string>
    

</resources>
