<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/profile_withdrawButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/d10p"
        android:text="@string/profile_withdraw"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/profile_withdrawEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_withdrawButton"
        android:layout_alignLeft="@+id/nameText_profileScreen"
        android:background="@drawable/fancy_title"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <TextView
        android:id="@+id/profile_walletText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="$0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/vacancyItem_expireText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_withdrawEdit"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_withdraw_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/profile_avatarView"
        android:layout_width="@dimen/d100p"
        android:layout_height="@dimen/d100p"
        android:layout_above="@+id/profile_emailText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/profile_emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameText_profileScreen"
        android:layout_centerHorizontal="true"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/nameText_profileScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_walletText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/profile_update_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_walletText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/buy_coins_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <Button
            android:id="@+id/profile_buyFive"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_buy_five" />

        <Button
            android:id="@+id/profile_buyTen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_buy_ten" />

        <Button
            android:id="@+id/profile_buyFiveteen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_buy_fiveteen" />

        <Button
            android:id="@+id/profile_buyTwenty"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_buy_twenty" />
    </LinearLayout>

</RelativeLayout>