<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/d2p" >

            <TextView
                android:id="@+id/profile_emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_request"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fancy_title"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" >

                <requestFocus />
            </EditText>

            <!-- <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:gravity="center"
                android:text="@string/description_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/details_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:minLines="@integer/i5"
                android:textColor="@android:color/white" />
 -->
            <TextView                
                android:id="@+id/vacancyItem_termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:gravity="center"
                android:text="@string/company_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_companyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/vacancyItem_cityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:layout_weight="0.09"
                android:gravity="center"
                android:text="@string/vc_company_salary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_companySalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:layout_weight="0.09"
                android:gravity="center"
                android:text="@string/vc_enter_city"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:layout_weight="0.09"
                android:gravity="center"
                android:text="@string/vc_demands"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_demands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:layout_weight="0.09"
                android:gravity="center"
                android:text="@string/vc_terms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:layout_weight="0.09"
                android:gravity="center"
                android:text="@string/vc_company_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_company_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10p"
                android:layout_weight="0.09"
                android:gravity="center"
                android:text="@string/vc_company_address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:typeface="serif" />

            <EditText
                android:id="@+id/newRequest_company_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:ems="10"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/newRequest_nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/proceed_text"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

</LinearLayout>
